--- a/src/components/css/CourseInfo.css
+++ b/src/components/css/CourseInfo.css
@@ -1,4 +1,9 @@
-.CourseInfo-iframe {
+.CourseInfo-iframe-wrapper {
+    display: flex;
     height: 100%;
-    width: 100%;
+}
+.CourseInfo-iframe {
+    flex: 1;
+    border: none;
+    height: 100%;
 }
