Add basic non-functional legend

--- a/src/components/css/Title.css
+++ b/src/components/css/Title.css
@@ -1,5 +1,5 @@
 .Title {
-    background: #d3d3d3;
+    background: #d3d3d3a1;
     border-bottom: 1px solid black;
     display: flex;
     flex-direction: row;
