--- a/src/components/css/Title.css
+++ b/src/components/css/Title.css
@@ -1,5 +1,5 @@
 .Title {
-    background: #d3d3d3a1;
+    background: #d3d3d3c7;
     border-bottom: 1px solid black;
     display: flex;
     flex-direction: row;
@@ -28,7 +28,17 @@
     padding: 0.5em;
 }
 
-.Title-search-text{
+.Title-calender {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5em;
+    width: 15em;
+}
+
+
+.Title-text{
     margin: 0 0.5em;
 }
 
