--- a/src/components/shell/css/Title.css
+++ b/src/components/shell/css/Title.css
@@ -56,9 +56,6 @@
 }
 
 .Title-about-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin: 0.5em;
-    padding: 0.5em;
+    width: 3em;
 }
