--- a/src/components/utils/modals/css/AboutModal.css
+++ b/src/components/utils/modals/css/AboutModal.css
@@ -1,11 +1,17 @@
-.AboutModal-welcome-text {
-    text-align: center;
-}
-
-.AboutModal-title {
-    text-align: center;
-}
-
 .AboutModal-calendar-dropdown {
     width: 8em;
+}
+
+.AboutModal-select-text {
+    color: rgba(0, 0, 0, 0.54);
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    line-height: 1.5em;
+    margin: 1em;
+}
+
+.AboutModal-select-container {
+    text-align: center;
 }
