--- a/src/components/shell/css/Title.css
+++ b/src/components/shell/css/Title.css
@@ -6,17 +6,17 @@
     justify-content: center;
     align-content: center;
     padding: 0 0.5em;
-    height: 5.5vh;
+    flex: 1;
+    height: 3em;
 }
 
 .Title-name {
-    border-right: 3px solid grey;
-    padding: 0 0.5em;
-    font-size: 1.5em;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 2em;
+    font-size: 1.5em; 
     font-family: bold;
-    text-align: left;
-    line-height: 50px;
-    width: 11em;
+    width: 6em;
 }
 
 .Title-middle {
@@ -28,33 +28,22 @@
     padding: 0.5em;
 }
 
-.Title-calender {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5em;
-    width: 15em;
-}
-
-.Title-text{
-    margin: 0 0.5em;
-}
-
 .Title-search-box {
-    background: white; 
+    background: white;
 }
 
-.Title-search-button {
-    flex: 0;
-    margin: 0 0.5em;
+.Title-search-text-box {
+    padding-left: 1em;
 }
 
 .Title-error {
-    width: 10em;
+    padding: 0 1em;
 }
 
-.Title-about-button {
+.Title-help-button-wrapper {
+    width: 6em;
+}
+.Title-help-button {
     margin: 0.5em;
     width: 3em;
 }
