--- a/src/components/shell/css/App.css
+++ b/src/components/shell/css/App.css
@@ -2,18 +2,21 @@
   height: 100vh;
   width: 100vw;
   display: flex;
-  flex-direction: row;
-}
-
-.App-graph {
-  height: 100%;
-  width: 100%;
-  flex: 1;
-  display: flex;
   flex-direction: column;
 }
 
+.App-main {
+  flex: 1;
+  display: flex;
+}
+
+.App-graph {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+}
+
 .App-info-pane {
-   width: 35em;
+   width: 25em;
    border-left: 2px solid black;
 }
