--- a/src/components/shell/graph/css/GraphBar.css
+++ b/src/components/shell/graph/css/GraphBar.css
@@ -6,13 +6,18 @@
     justify-content: center;
     align-content: center;
     padding: 0 0.5em;
-    height: 5.5vh;
+    height: 3em;
+}
+.Legend-text {
+    padding-right: 0.5em;
+    font-family: inherit;
+    font-weight: 400;
 }
 
 .GraphBar-legend {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex: 1;
     padding: 0.5em;
@@ -23,8 +28,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0.5em;
-    width: 14em;
+
 }
 
 .GraphBar-legend-item-select {
@@ -36,8 +40,9 @@
 .GraphBar-arrow-blue, 
 .GraphBar-arrow-red,
 .GraphBar-arrow-orange {
+    font: bold;
+    font-size: 3em;
     font-weight: 900;
-    font-size: 50px;
 }
 
 .GraphBar-arrow-green {
@@ -58,5 +63,5 @@
 
 .GraphBar-help-button {
     margin: 0.5em;
-    width: 3em;
+    width: 10em;
 }
