--- a/src/components/shell/css/App.css
+++ b/src/components/shell/css/App.css
@@ -3,6 +3,7 @@
   width: 100vw;
   display: flex;
   flex-direction: column;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif; 
 }
 
 .App-main {
@@ -11,8 +12,7 @@
 }
 
 .App-graph {
-  width: 100%;
-  height: 100%;
+  display: flex;
   flex: 1;
 }
 
