--- a/src/components/shell/css/CourseInfoPanel.css
+++ b/src/components/shell/css/CourseInfoPanel.css
@@ -1,9 +1,5 @@
-.CourseInfo-iframe-wrapper {
-    display: flex;
-    height: 100%;
-}
 .CourseInfo-iframe {
-    flex: 1;
     border: none;
     height: 100%;
+    width: 100%;
 }
