--- a/src/components/shell/graph/css/GraphLegend.css
+++ b/src/components/shell/graph/css/GraphLegend.css
@@ -3,4 +3,17 @@
     width: 100%;
     background-color: #F2F2F2;
     border-bottom: 1px solid lightgrey;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding: 0.75em 1em;
+}
+
+.GraphLegend-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.75em;
+    font-family: bold;
+    flex-grow: 1;
 }
