--- a/src/components/shell/css/App.css
+++ b/src/components/shell/css/App.css
@@ -5,3 +5,20 @@
   width: 100%;
   min-width: 75em;
 }
+
+.App-Overlay {
+  position: fixed; /* Sit on top of the page content */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255,255,255,0); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
+
+.App-Overlay-Hide {
+  display: none;
+}
