--- a/src/components/shell/css/App.css
+++ b/src/components/shell/css/App.css
@@ -6,19 +6,21 @@
   min-width: 75em;
 }
 
-.App-Overlay {
-  position: fixed; /* Sit on top of the page content */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
+.App-Overlay-Show {
+  position: fixed;
+  width: 100%; 
+  height: 100%; 
   top: 0; 
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(255,255,255,0); /* Black background with opacity */
-  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-  cursor: pointer; /* Add a pointer on hover */
+  background-color: rgba(255,255,255,1);
+  z-index: 9999; 
+  cursor: pointer;
 }
 
 .App-Overlay-Hide {
+  width: 0%;
+  height: 0%;
   display: none;
 }
