Fix CalendarSelector width

--- a/src/components/shell/modals/controls/css/CalendarSelector.css
+++ b/src/components/shell/modals/controls/css/CalendarSelector.css
@@ -12,7 +12,8 @@
     margin: 1em;
 }
 
-.CalendarSelector-dropdown {
-    width: 8em;
+.CalendarSelector-dropdown {   
+    text-align: left;
+    width: 10em;
 }
 
